--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,94 +1,92 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Leftovers</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <link rel="stylesheet" href="https://use.typekit.net/ofy1zbz.css">
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
-  <body>
-    <div class="antialiased bg-gray-50 w-screen">
-      <nav class="bg-white px-4 py-2.5 fixed left-0 right-0 top-0 z-50 w-64">
-        <div class="flex flex-wrap justify-between items-center">
-          <div class="flex justify-start items-center">
-            <a href="https://flowbite.com" class="flex items-center justify-between mr-4">
-              <div class="mr-3">
-                <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1"/>
-                </svg>
-              </div>
-              <span class="self-center text-2xl font-black whitespace-nowrap uppercase">Leftovers</span>
-            </a>
-          </div>
-        </div>
-      </nav>
-      <!-- Sidebar -->
-      <aside
+	<head>
+		<title>Leftovers</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<%= csrf_meta_tags %>
+		<%= csp_meta_tag %>
+		<link rel="stylesheet" href="https://use.typekit.net/ofy1zbz.css">
+		<%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+		<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+		<%= javascript_importmap_tags %>
+	</head>
+	<body>
+		<div class="antialiased bg-gray-50 w-screen">
+			<nav class="bg-white px-4 py-2.5 fixed left-0 right-0 top-0 z-50 w-64">
+				<div class="flex flex-wrap justify-between items-center">
+					<div class="flex justify-start items-center">
+						<a href="https://flowbite.com" class="flex items-center justify-between mr-4">
+							<div class="mr-3">
+								<svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
+									<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1"/>
+								</svg>
+							</div>
+							<span class="self-center text-2xl font-black whitespace-nowrap uppercase">Leftovers</span>
+						</a>
+					</div>
+				</div>
+			</nav>
+			<!-- Sidebar -->
+			<aside
         class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 bg-white md:translate-x-0"
         aria-label="Sidenav"
         id="drawer-navigation"
       >
-        <div class="overflow-y-auto py-5 px-3 h-full bg-white ">
-          <ul class="space-y-2">
-            <li>
-              <a
-          href="#"
-          class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg  hover:bg-gray-100  group"
-        >
-                <%= render partial: "common/icons/storefront" %>
-                <span class="ml-3">My Pantry</span>
-              </a>
-            </li>
-            <li>
-              <button
-          type="button"
-          class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100"
-        >
-                <%= render partial: "common/icons/lists_clipboard" %>
-                <span class="flex-1 ml-3 text-left whitespace-nowrap"
-            >Grocery Lists</span
-          >
-              </button>
-            </li>
-            <li>
-              <button
-          type="button"
-          class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100"
-        >
-                <%= render partial: "common/icons/queue_list" %>
-                <span class="flex-1 ml-3 text-left whitespace-nowrap">
-                  Recipes
-                  <span>
-                  </button>
-                </li>
-                <li>
-                  <button type="button" class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100" >
-                    <%= render partial: "common/icons/list" %>
-                    <span class="flex-1 ml-3 text-left whitespace-nowrap">
-                      All Ingredients
-                      <span>
-                      </button>
-                    </li>
-                  </ul>
-                </div>
-                <div class="hidden absolute bottom-0 left-0 justify-start p-4 space-x-4 w-full lg:flex bg-white  z-20">
-                  <a href="#" data-tooltip-target="tooltip-settings" class="inline-flex justify-center p-2 text-white rounded cursor-pointer  hover:text-gray-900 hover:bg-gray-100">
-                    <%= render partial: "common/icons/gear" %>
-                    <span class="flex-1 ml-3 text-left text-white font-medium whitespace-nowrap">
-                      Settings
-                      <span>
-                      </a>
-                    </div>
-                  </aside>
-                </div>
-                <%# View Area %>
-                <main class="relative ml-64 px-6 h-auto pt-20 bg-transparent">
-                  <%= turbo_frame_tag turbo_modal_id %>
-                  <%= yield %>
-                </main>
-              </body>
-            </html>
+				<div class="overflow-y-auto py-5 px-3 h-full bg-white ">
+					<ul class="space-y-2">
+						<li>
+							<a
+                href="#"
+                class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg  hover:bg-gray-100  group"
+              >
+								<%= render partial: "common/icons/storefront" %>
+								<span class="ml-3">My Pantry</span>
+							</a>
+						</li>
+						<li>
+							<button
+                type="button"
+                class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100"
+              >
+								<%= render partial: "common/icons/lists_clipboard" %>
+								<span class="flex-1 ml-3 text-left whitespace-nowrap">Grocery Lists</span>
+							</button>
+						</li>
+						<li>
+							<button
+                type="button"
+                class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100"
+              >
+								<%= render partial: "common/icons/queue_list" %>
+								<span class="flex-1 ml-3 text-left whitespace-nowrap">
+									Recipes
+									<span>
+									</button>
+								</li>
+								<li>
+									<button type="button" class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100" >
+										<%= render partial: "common/icons/list" %>
+										<span class="flex-1 ml-3 text-left whitespace-nowrap">
+											All Ingredients
+											<span>
+											</button>
+										</li>
+									</ul>
+								</div>
+								<div class="hidden absolute bottom-0 left-0 justify-start p-4 space-x-4 w-full lg:flex bg-white  z-20">
+									<a href="#" data-tooltip-target="tooltip-settings" class="inline-flex justify-center p-2 text-white rounded cursor-pointer  hover:text-gray-900 hover:bg-gray-100">
+										<%= render partial: "common/icons/gear" %>
+										<span class="flex-1 ml-3 text-left text-white font-medium whitespace-nowrap">
+											Settings
+											<span>
+											</a>
+										</div>
+									</aside>
+								</div>
+								<%# View Area %>
+								<main class="relative ml-64 px-6 h-auto pt-20 bg-transparent">
+									<%= turbo_frame_tag turbo_modal_id %>
+									<%= yield %>
+								</main>
+							</body>
+						</html>
